--- a/main.html
+++ b/main.html
@@ -7,10 +7,9 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+	<img class="moviePic" src="https://media.istockphoto.com/id/1442946345/photo/software-source-code-programming-code-programming-code-on-computer-screen-developer-working.jpg?s=2048x2048&w=is&k=20&c=JEJk2ptfzj59hNZjKM9U3MsbzV9EZl_5h6MFPgxNAIs=" alt="Movie Poster">
+	<p class="movieDetail">Movie Description</p>
+	
 </body>
 
 </html>
